# Parallel-Programming-Models

./: .gitignore  README.md
Algo1-SIFT_Detector/: CMakeLists.txt  README.md  main.cpp
Algo2-Hough_Transform/: CMakeLists.txt  README.md  main.cpp
